--- a/ProgettoRespa.net/ProgettoRespa.net/ProgettoRespa.net.csproj
+++ b/ProgettoRespa.net/ProgettoRespa.net/ProgettoRespa.net.csproj
@@ -47,14 +47,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ErroreTemperatura.cs" />
+    <Compile Include="ErroriVestiti.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Indumenti.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SceltaVestiti.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SceltaVestiti.Designer.cs">
+      <DependentUpon>SceltaVestiti.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -67,6 +75,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SceltaVestiti.resx">
+      <DependentUpon>SceltaVestiti.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
