--- a/ProgettoRespa.net/ProgettoRespa.net/ProgettoRespa.net.csproj
+++ b/ProgettoRespa.net/ProgettoRespa.net/ProgettoRespa.net.csproj
@@ -63,6 +63,12 @@
     <Compile Include="SceltaVestiti.Designer.cs">
       <DependentUpon>SceltaVestiti.cs</DependentUpon>
     </Compile>
+    <Compile Include="SelezioneTemperatura.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SelezioneTemperatura.Designer.cs">
+      <DependentUpon>SelezioneTemperatura.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -77,6 +83,9 @@
     </Compile>
     <EmbeddedResource Include="SceltaVestiti.resx">
       <DependentUpon>SceltaVestiti.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SelezioneTemperatura.resx">
+      <DependentUpon>SelezioneTemperatura.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
