--- a/ProgettoRespa.net/ProgettoRespa.net/ProgettoRespa.net.csproj
+++ b/ProgettoRespa.net/ProgettoRespa.net/ProgettoRespa.net.csproj
@@ -165,5 +165,8 @@
   <ItemGroup>
     <None Include="Resources\felpaverde1.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\allarme.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
